--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: ^3.9.2
@@ -45,6 +45,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   get_it: ^8.2.0
   pretty_dio_logger: ^1.4.0
+  firebase_core: ^4.2.0
 
 dev_dependencies:
   flutter_test:
