--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yml
@@ -8,32 +8,37 @@ on:
 jobs:
   distribute_to_firebase:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout my repo code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
+          flutter-version: '3.24.3'
           channel: stable
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.2.3"
-          bundler-cache: true
+          ruby-version: "3.3.0"
+          bundler-cache: false
           working-directory: android
 
       - name: Build and Distribute App
         env:
           FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }}
         run: |
-          bundle exec fastlane android firebase_distribution
+          gem install fastlane -NV
+          gem install fastlane-plugin-firebase_app_distribution
+          flutter clean
+          flutter build apk --release --target lib/main.dart --no-tree-shake-icons
+          fastlane android firebase_distribution
         working-directory: android
-
