--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yml
@@ -10,35 +10,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout my repo code
-        uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: '17'
+          java-version: '11'
           distribution: 'temurin'
 
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.3'
+          flutter-version: '3.19.0'
           channel: stable
+
+      - name: Install Dependencies
+        run: flutter pub get
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.3.0"
-          bundler-cache: false
+          ruby-version: '3.2.3'
+          bundler-cache: true
           working-directory: android
+
+      - name: Install Fastlane
+        run: gem install fastlane -NV
 
       - name: Build and Distribute App
         env:
           FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }}
         run: |
-          gem install fastlane -NV
-          gem install fastlane-plugin-firebase_app_distribution
-          flutter clean
-          flutter build apk --release --target lib/main.dart --no-tree-shake-icons
-          fastlane android firebase_distribution
+          bundle exec fastlane android firebase_distribution
         working-directory: android
