--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yml
@@ -8,10 +8,9 @@ on:
 jobs:
   distribute_to_firebase:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - name: Checkout my repo code
+        uses: actions/checkout@v2
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -22,21 +21,14 @@ jobs:
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
           channel: stable
-
-      - name: Install Dependencies
-        run: flutter pub get
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2.3'
+          ruby-version: "3.4.7"
           bundler-cache: true
           working-directory: android
-
-      - name: Install Fastlane
-        run: gem install fastlane -NV
 
       - name: Build and Distribute App
         env:
@@ -44,3 +36,4 @@ jobs:
         run: |
           bundle exec fastlane android firebase_distribution
         working-directory: android
+
