--- a/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yml
+++ b/.github/workflows/android_fastlane_firebase_app_distribution_workflow.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   distribute_to_firebase:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout my repo code
         uses: actions/checkout@v2
@@ -27,13 +28,18 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.4.7"
-          bundler-cache: true
+          bundler-cache: false
           working-directory: android
 
+      - name: Add Linux platform and install dependencies
+        working-directory: android
+        run: |
+          bundle lock --add-platform x86_64-linux
+          bundle install
+
       - name: Build and Distribute App
+        working-directory: android
         env:
           FIREBASE_CLI_TOKEN: ${{ secrets.FIREBASE_CLI_TOKEN }}
         run: |
           bundle exec fastlane android firebase_distribution
-        working-directory: android
-
